# watsonx-with-multimodal-llava

./: .gitignore  1-Data-Generation.ipynb  2-Retrieval-Image.ipynb  3-Inference-Model.ipynb  4_Multimodal_Chat_Gradio.ipynb  5_Multimodal_Chat_Simple.ipynb  6_Watsonx_Multimodal_Chat.ipynb  Dockerfile  README.md  app.py  backend.py  hotels_map.html  map.html  pyproject.toml  requirements.txt  setup_local.md  style.css  watsonx.md
backup/: data.py  front.py  geocoded_hotels.csv
backup/remaining/: data.py  geocoded_hotels.csv  hotel_info.csv
dataset/: chain_info.csv  test_set.csv
docker/: README.md
notebooks/: Inference_with_LLaVa_for_multimodal_generation.ipynb  Use watsonx, Chroma, and LangChain to answer questions (RAG).ipynb
